Small changes to logo and dropdown button

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <header>
   <img class="logo" src="https://t4.ftcdn.net/jpg/00/94/65/35/500_F_94653581_Xjog6a3vkd7snnpXuVnzbzOVMbrYDfua.jpg">
 
-  <div class="dropdown is-active">
+  <div id="NavBtn" class="dropdown is-hoverable">
       <div class="dropdown-trigger">
         <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
           <span>Dropdown button</span>
@@ -18,6 +18,9 @@
           <a href="#" class="dropdown-item">
             Help
           </a>
+          <a href="#" class="dropdown-item">
+            Settings
+          </a>
           <hr class="dropdown-divider">
           <a href="#" class="dropdown-item">
             Signout
@@ -26,18 +29,11 @@
       </div>
     </div>
 </header>
-<div class="columns">
-  <div class="column">
-    First column
+<br>
+<div class="columns is-desktop">
+    <div class="column">1</div>
+    <div class="column">2</div>
+    <div class="column">3</div>
+    <div class="column">4</div>
   </div>
-  <div class="column">
-    Second column
-  </div>
-  <div class="column">
-    Third column
-  </div>
-  <div class="column">
-    Fourth column
-  </div>
-</div>
 
