--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,5 +1,13 @@
 .logo {
     height: 50px;
-    width: 50px
+    width: 50px;
+    position: absolute;
+    top: 8px;
+    left: 16px;
 }
 
+#NavBtn {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+}
