Added Color-Coded Functionality

--- a/src/app/modules/time-selection/components/color-coded-graph/color-coded-graph.component.scss
+++ b/src/app/modules/time-selection/components/color-coded-graph/color-coded-graph.component.scss
@@ -3,14 +3,14 @@
 }
 
 .green {
-  background-color: green;
+  background-color: #365902;
 }
 
 .yellow {
-  background-color: yellow;
+  background-color: #F2B705;
 }
 
 .red {
-  background-color: red;
+  background-color: #D90404;
 }
 
