--- a/src/app/modules/time-selection/components/color-coded-graph/color-coded-graph.component.html
+++ b/src/app/modules/time-selection/components/color-coded-graph/color-coded-graph.component.html
@@ -2,10 +2,11 @@
 
 <div class="container" *ngFor="let hour of timeSelection">
   <div class="columns">
+    <div class="column"> {{ hour.hour }} </div>
     <div class="column">
-      <a class="button is-small is-fullwidth {{ colorCoded(percentage(hour.peopleTotal, hour.canAttend)) }}"> {{ hour.hour }} </a>
-      {{colorCoded(percentage(hour.peopleTotal, hour.canAttend))}} 
-      {{percentage(hour.peopleTotal, hour.canAttend)}}
+      <a class="button is-small is-fullwidth {{ colorCoded(percentage(hour.peopleTotal, hour.canAttend)) }}"> {{ hour.canAttend }} / {{ hour.peopleTotal }} </a>
+      <!-- {{colorCoded(percentage(hour.peopleTotal, hour.canAttend))}} 
+      {{percentage(hour.peopleTotal, hour.canAttend)}} -->
     </div>
   </div>
 </div>
