--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<!-- <app-time-selection></app-time-selection> -->
-<app-color-coded-graph></app-color-coded-graph>
+<app-time-selection></app-time-selection>
+<!-- <app-color-coded-graph></app-color-coded-graph> -->
 
 <router-outlet></router-outlet>
