--- a/client/src/app/modules/dashboard/components/navbar/navbar.component.html
+++ b/client/src/app/modules/dashboard/components/navbar/navbar.component.html
@@ -12,43 +12,33 @@
   </div>
 
   <div id="navbarBasicExample" class="navbar-menu">
-    <div class="navbar-start">
-      <a class="navbar-item" href="/dashboard">
-        Home
-      </a>
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">
-          More
-        </a>
-
-        <div class="navbar-dropdown">
-          <a class="navbar-item">
-            About
-          </a>
-          <a class="navbar-item">
-            Contact
-          </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item">
-            Report an issue
-          </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item">
-            Log out
-          </a>
-        </div>
-      </div>
-    </div>
 
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a class="button is-primary">
-            <strong>Sign up</strong>
-          </a>
-          <a class="button is-light">
-            Log in
-          </a>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png">
+            <i class="far fa-bell"></i>
+            <div class="navbar-item has-dropdown is-hoverable">
+                <a class="navbar-link">
+                  More
+                </a>
+            
+                <div class="navbar-dropdown">
+                  <a class="navbar-item">
+                    About
+                  </a>
+                  <a class="navbar-item">
+                    Contact
+                  </a>
+                  <a class="navbar-item">
+                    Report an issue
+                  </a>
+                  <hr class="navbar-divider">
+                  <a class="navbar-item">
+                    Log out
+                  </a>
+                </div>
+              </div>
         </div>
       </div>
     </div>
