added to dashboard

--- a/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
+++ b/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<body class="has-background-light">
 <div class="columns is-mobile is-centered">
   <div class="columns">
     <div class="column">
@@ -49,4 +50,5 @@
     </div>
   </div>
   </div>
-  
+
+  </body>
