--- a/client/src/app/modules/dashboard/components/navbar/navbar.component.html
+++ b/client/src/app/modules/dashboard/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar has-background-primary" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="/dashboard">
       <img src="https://www.logolynx.com/images/logolynx/74/7491383e2d5c84669f51f2e7ddaaf1d1.png" width="100" height="100">
