--- a/client/src/app/modules/dashboard/components/navbar/navbar.component.html
+++ b/client/src/app/modules/dashboard/components/navbar/navbar.component.html
@@ -3,15 +3,15 @@
     <a class="navbar-item" href="/dashboard">
       <img src="https://www.logolynx.com/images/logolynx/74/7491383e2d5c84669f51f2e7ddaaf1d1.png" width="100" height="100">
     </a>
-
-    <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+    
+    <a role="button" (click)="toggleMenu()" class="navbar-burger burger {{menuOpen?'is-active':''}}" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
     </a>
   </div>
 
-  <div id="navbarBasicExample" class="navbar-menu">
+  <div id="navbarBasicExample" class="navbar-menu {{menuOpen?'is-active':''}}">
 
     <div class="navbar-end">
       <div class="navbar-item">
@@ -19,28 +19,13 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png">
             <i class="far fa-bell"></i>
             <div class="navbar-item has-dropdown is-hoverable">
-                <a class="navbar-link">
-                  More
-                </a>
-            
-                <div class="navbar-dropdown">
-                  <a class="navbar-item">
-                    About
-                  </a>
-                  <a class="navbar-item">
-                    Contact
-                  </a>
-                  <a class="navbar-item">
-                    Report an issue
-                  </a>
-                  <hr class="navbar-divider">
-                  <a class="navbar-item">
-                    Log out
-                  </a>
-                </div>
-              </div>
+              <a class="navbar-item" (click)="onLogoutClick()" href="#">
+                Log out
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 </nav>
+
