--- a/client/src/app/shared/components/login-page/login-page.component.html
+++ b/client/src/app/shared/components/login-page/login-page.component.html
@@ -1,28 +1,25 @@
-<head>
-  
-</head>
-<body>
+
 <div class="flexbox-parent">
   <div layout="row" layout-align="center center" style="min-height: 500px">
     
-    <form action="/users" method="POST" display="is-flex">
+    <form (submit)="onLoginSubmit()" display="is-flex">
       <h1>Login</h1>
       <div class = 'username'>
           <label for="name"></label>
-          <input type="text" name="username" placeholder="Username">
-      </div>
-      <div class = 'email'><br>
-          <label for="name"></label>
-          <input type="text" name="email" placeholder="Email">
+          <input type="text" [(ngModel)]="userName" name="userName" placeholder="Username">
       </div>
       <div class = 'password'><br>
           <label for="name"></label>
-          <input type="text" name="password" placeholder="Password">
+          <input type="text" [(ngModel)]="password" name="password" placeholder="Password">
       </div>
       <div class = 'submit'><br>
           <button type="submit">Login</button>
       </div>
     </form>
+    <div>
+      <a [routerLink]="['/signup']">SignUp</a>
+    </div>
+    
   </div>
 </div>
 <footer>
@@ -32,4 +29,3 @@
     Privacy Policy.
   </p>
   </footer>
-</body>
