--- a/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
+++ b/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <app-navbar></app-navbar>
 
-<div class="columns is-mobile is-centered">
+<div class="container">
+<div id="column-one" class="columns is-mobile is-centered">
   <div class="columns">
     <div class="column">
         <figure class="image is-128x128">
@@ -50,4 +51,5 @@
     </div>
   </div>
   </div>
+</div>
   
