--- a/client/src/app/modules/dashboard/components/dashboard/dashboard.component.css
+++ b/client/src/app/modules/dashboard/components/dashboard/dashboard.component.css
@@ -1,1 +1,8 @@
-/* No CSS *//*# sourceMappingURL=dashboard.component.css.map */
+.container {
+  margin-top: 150px;
+}
+
+#column-one {
+  margin-bottom: 30px;
+}
+/*# sourceMappingURL=dashboard.component.css.map */
