--- a/client/src/app/modules/dashboard/components/navbar/navbar.component.css
+++ b/client/src/app/modules/dashboard/components/navbar/navbar.component.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=navbar.component.css.map */
+.navbar {
+  background-color: lightgray;
+}
+/*# sourceMappingURL=navbar.component.css.map */
