--- a/client/src/app/shared/components/login-page/login-page.component.html
+++ b/client/src/app/shared/components/login-page/login-page.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class = 'password'><br>
           <label for="name"></label>
-          <input type="text" [(ngModel)]="password" name="password" placeholder="Password">
+          <input type="password" [(ngModel)]="password" name="password" placeholder="Password">
       </div>
       <div class = 'submit'><br>
           <button type="submit">Login</button>
