--- a/client/src/app/modules/dashboard/components/event-page/event-page.component.scss
+++ b/client/src/app/modules/dashboard/components/event-page/event-page.component.scss
@@ -1,19 +1,36 @@
 body {
-    background-color: rgb(52, 102, 168);    
-    font-family: 'Oswald', sans-serif;
+  background-color: rgb(52, 102, 168);
+  font-family: 'Oswald', sans-serif;
 }
+
 .flexbox-parent {
-    display: flex;
-    margin: 100px 20%;
-    justify-content: space-around;
-    text-align: center;
-    background-color: rgb(243, 124, 124);
+  display: flex;
+  margin: 100px 20%;
+  justify-content: space-around;
+  text-align: center;
+  background-color: rgb(243, 124, 124);
 }
 
 .create {
-    text-align: center;
+  text-align: center;
 }
+
 button:hover {
-    background-color: rgb(217, 0, 255);
-    color: rgba(0, 0, 0, 0.856);;
+  background-color: rgb(217, 0, 255);
+  color: rgba(0, 0, 0, 0.856);
+  ;
+}
+
+
+
+@media(max-width: 500px) {
+  body {
+    width: 95%;
+    min-width: 200px;
+    background-color: yellow;
+  }
+
+  textarea {
+    width: 75%;
+  }
 }
