--- a/client/src/app/modules/dashboard/components/navbar/navbar.component.html
+++ b/client/src/app/modules/dashboard/components/navbar/navbar.component.html
@@ -1,10 +1,16 @@
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="/dashboard">
-      <img src="https://www.logolynx.com/images/logolynx/74/7491383e2d5c84669f51f2e7ddaaf1d1.png" width="100" height="100">
+      <img src="https://www.logolynx.com/images/logolynx/74/7491383e2d5c84669f51f2e7ddaaf1d1.png" width="100"
+        height="100">
     </a>
-    
-    <a role="button" (click)="toggleMenu()" class="navbar-burger burger {{menuOpen?'is-active':''}}" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+
+    <a role="button" (click)="toggleMenu()" class="navbar-burger burger {{menuOpen?'is-active':''}}" aria-label="menu"
+      aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
@@ -16,16 +22,15 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png">
-            <i class="far fa-bell"></i>
-            <div class="navbar-item has-dropdown is-hoverable">
-              <a class="navbar-item" (click)="onLogoutClick()" href="#">
-                Log out
-              </a>
-            </div>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png">
+          <i class="far fa-bell"></i>
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-item" (click)="onLogoutClick()" href="#">
+              Log out
+            </a>
           </div>
         </div>
       </div>
     </div>
+  </div>
 </nav>
-
