--- a/client/src/app/modules/dashboard/components/profile/profile.component.html
+++ b/client/src/app/modules/dashboard/components/profile/profile.component.html
@@ -1,3 +1,8 @@
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
+
 <div *ngIf="user">
   <h2 class="page-header">{{user.firstName}}</h2>
   <ul class="list-group">
