--- a/client/src/app/shared/components/login-page/login-page.component.html
+++ b/client/src/app/shared/components/login-page/login-page.component.html
@@ -1,4 +1,8 @@
 
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
 <div class="flexbox-parent">
   <div layout="row" layout-align="center center" style="min-height: 500px">
     
