Deployment setup + cleanup

--- a/client/src/app/modules/dashboard/components/event-detail/event-detail.component.html
+++ b/client/src/app/modules/dashboard/components/event-detail/event-detail.component.html
@@ -27,15 +27,15 @@
   </head>
 <header>
     <div id="textbox">
-      <p class="alignleft title">Sunday Picnic! (placeholder) {{title}}</p>
-      <p class="alignright title">Date (placeholder) {{title}}</p>
+      <p class="alignleft title">Sunday Picnic! (placeholder)</p>
+      <p class="alignright title">Date (placeholder)</p>
     </div>
     <div style="clear: both;"></div>
 </header>
 <body>
 <br>
 <p class="body">
-Come join us! {{text}}
+Come join us! 
 </p>
 </body>
 </html>
