--- a/client/src/app/shared/components/signup-page/signup-page.component.html
+++ b/client/src/app/shared/components/signup-page/signup-page.component.html
@@ -1,8 +1,8 @@
-<head>
+<!-- <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-</head>
+</head> -->
 
 <body>
   <div class="flexbox-parent">
